# strcc

./: .gitignore  README.md  configure.ac
src/: Makefile.am  strcc.h  strcc_apr.c  strcc_apr.h  strcc_cases_httpd.c  strcc_cases_httpd.h  strcc_curl.c  strcc_curl.h  strcc_main.c
test/: Makefile.am  httpd.json  httpd_extract.py  mk_candidate_c.py
